# COSMOSAC

./: .gitignore  .gitmodules  CMakeLists.txt  COSMO-PurePython.ipynb  COSMO-SAC.ipynb  LICENSE  README.md  appveyor.yml  easy_COSMOSAC.py  plot_profiles.py  pyproject.toml  setup.py  testit.py  time_calcs.py
include/COSMO_SAC/: COSMO.hpp  profile_db.hpp  util.hpp
profiles/: generate_all_profiles.py  generate_validation_data.py  to_sigma.py
profiles/DMol3_TEST/: LFQCEHFDDXELDD-UHFFFAOYSA-N.cosmo  LFQSCWFLJHTTHZ-UHFFFAOYSA-N.cosmo  LFQSCWFLJHTTHZ-UHFFFAOYSA-N.sigma
profiles/GAMESS_TEST/: ETHANOL.gout  ETHANOL.sigma
profiles/GAUSSIAN09_TEST/: ethanol.cosmo  ethanol.sigma
profiles/MOPAC_TEST/: 4-Hydroxybenzaldehyde.cosmo  ethanol.cosmo
profiles/UD/: Readme.txt  add_names.py  complist.txt
profiles/UD/cosmo/: AAAQKTZKLRYKHR-UHFFFAOYSA-N.cosmo  AATNZNJRDOVKDD-UHFFFAOYSA-N.cosmo  ABDKAPXRBAPSQN-UHFFFAOYSA-N.cosmo  ABPBVCKGWWGZDP-UHFFFAOYSA-N.cosmo  ACAUYCZBWABOLI-UHFFFAOYSA-N.cosmo  ACKALUBLCWJVNB-UHFFFAOYSA-N.cosmo  ADOBXTDBFNCOBN-UHFFFAOYSA-N.cosmo  ADOQBZAVKYCFOI-HWKANZROSA-N.cosmo  ADOQBZAVKYCFOI-HYXAFXHYSA-N.cosmo  AEMRFAOFKBGASW-UHFFFAOYSA-N.cosmo  AEXMKKGTQYQZCS-UHFFFAOYSA-N.cosmo  AFABGHUZZDYHJO-UHFFFAOYSA-N.cosmo  AFBPFSWMIHJQDM-UHFFFAOYSA-N.cosmo  AFFLGGQVNFXPEV-UHFFFAOYSA-N.cosmo  AFOSIXZFDONLBT-UHFFFAOYSA-N.cosmo  AFTPEBDOGXRMNQ-QMMMGPOBSA-N.cosmo  AFTSHZRGGNMLHC-UHFFFAOYSA-N.cosmo  AFYPFACVUDMOHA-UHFFFAOYSA-N.cosmo  AFZZYIJIWUTJFO-UHFFFAOYSA-N.cosmo  AGUIVNYEYSCPNI-UHFFFAOYSA-N.cosmo  AHFMSNDOYCFEPH-UHFFFAOYSA-N.cosmo  AHHWIHXENZJRFG-UHFFFAOYSA-N.cosmo  AHQZRFBZJSCKAV-UHFFFAOYSA-N.cosmo  AHZUOPSGLWYCNF-UHFFFAOYSA-N.cosmo  AIDFJGKWTOULTC-UHFFFAOYSA-N.cosmo  AILKHAQXUAOOFU-UHFFFAOYSA-N.cosmo  AIURIRUDHVDRFQ-UHFFFAOYSA-N.cosmo  AJDIZQLSFPQPEY-UHFFFAOYSA-N.cosmo  AJFDBNQQDYLMJN-UHFFFAOYSA-N.cosmo  AJKLKINFZLWHQE-UHFFFAOYSA-N.cosmo  AJPGNQYBSTXCJE-YFKPBYRVSA-N.cosmo  AKCRQHGQIJBRMN-UHFFFAOYSA-N.cosmo  AKEJUJNQAAGONA-UHFFFAOYSA-N.cosmo  AKGGYBADQZYZPD-UHFFFAOYSA-N.cosmo  AKIIJALHGMKJEJ-VXNVDRBHSA-N.cosmo  AKLMPECUKBNPII-CMDGGOBGSA-N.cosmo  AKUJBENLRBOFTD-OKPKAAPVSA-N.cosmo  AKUNSTOMHUXJOZ-UHFFFAOYSA-N.cosmo  ALDJIKXAHSDLLB-UHFFFAOYSA-N.cosmo  ALEXXDVDDISNDU-JZYPGELDSA-N.cosmo  (+2220 more)
profiles/UD/sigma/: AAAQKTZKLRYKHR-UHFFFAOYSA-N.sigma  AATNZNJRDOVKDD-UHFFFAOYSA-N.sigma  ABDKAPXRBAPSQN-UHFFFAOYSA-N.sigma  ABPBVCKGWWGZDP-UHFFFAOYSA-N.sigma  (+2258 more)
profiles/VT2005/: COSMO-SAC-VT-2005_v2.F90  Sigma_Profile_Database_Index_v2.txt
src/: main.cpp  pybind11_interface.cxx
tests/: catch_main.cpp  catch_tests.cpp
tests/direct_import/: README.md  import_profiles.py
vis/: COSMO-vis.py  Data.js  Lut.js  SAC-vis.html  vis.html
vis_poly/: DMol3_Tetramethyl_silicate_COSMO.ply  Dmol3_ETHANOL_COSMO.ply  GAMESS_ETHANOL_COSMO.ply  GAUSSIAN_ETHANOL_COSMO.ply  README.md  cosmo_poly.py
(+5955 files in other folders)
